@@ -11,6 +11,7 @@ require( dirname(__FILE__) . '/../../../functions/functions.php');
 $Database 	= new Database_PDO;
 $User 		= new User ($Database);
 $Admin	 	= new Admin ($Database);
+$Tools      = new Tools ($Database);
 $Result 	= new Result ();
 
 # verify that user is logged in
@@ -18,12 +19,12 @@ $User->check_user_session();
 
 # create csrf token
 $csrf = $User->csrf_cookie ("create", "group");
-
 # validate action
 $Admin->validate_action ($_POST['action']);
-
 # strip tags - XSS
 $_POST = $User->strip_input_tags ($_POST);
+# fetch custom fields
+$custom     = $Tools->fetch_custom_fields('userGroups');
 
 # fetch group and set title
 if($_POST['action']=="add") {
@@ -71,6 +72,32 @@ if($_POST['action']=="add") {
     	</td>
     	<td class="info2"><?php print _('Enter description'); ?></td>
     </tr>
+
+    <!-- Custom -->
+    <?php
+    if(sizeof($custom) > 0) {
+
+        print '<tr>';
+        print ' <td colspan="2"><hr></td>';
+        print '</tr>';
+
+        # count datepickers
+        $timepicker_index = 0;
+
+        # all my fields
+        foreach($custom as $field) {
+            // create input > result is array (required, input(html), timepicker_index)
+            $custom_input = $Tools->create_custom_field_input ($field, $group, $_POST['action'], $timepicker_index);
+            // add datepicker index
+            $timepicker_index = $timepicker_index + $custom_input['timepicker_index'];
+            // print
+            print "<tr>";
+            print " <td>".ucwords($Tools->print_custom_field_name ($field['name']))." ".$custom_input['required']."</td>";
+            print " <td>".$custom_input['field']."</td>";
+            print "</tr>";
+        }
+    }
+    ?>
 
 </table>
 </form>
